--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   assets:
     - lib/assets/laundry.jpg
     - lib/assets/picture.jpeg
+    - lib/assets/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
