Create Offers Feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ flutter:
   assets:
     - lib/assets/laundry.jpg
     - lib/assets/picture.jpeg
+    - lib/assets/oferta1.png
+    - lib/assets/oferta2.png
+    - lib/assets/oferta3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
