--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
     - lib/assets/oferta1.png
     - lib/assets/oferta2.png
     - lib/assets/oferta3.png
+    - lib/database/db.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
