--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .dart_tool/chrome-device/Default/AutofillStrikeDatabase/LOCK
 .dart_tool/chrome-device/Default/Cache/f_000002
+.idea/workspace.xml
